# STREAMLIT

./: .gitignore  main.py  pyproject.toml  requirements.txt
pages/: aboult.py
resources/: 2024-07-27T23-35_export.csv
