[tool.poetry]
name = "streamlit_web"
version = "0.1.0"
description = ""
authors = ["Gregorio Honorato"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
requests = "^2.32.3"
pandas = "^2.2.2"
plotly = "^5.23.0"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
